# homework_02_explorer

./: .travis.yml  CMakeLists.txt  CPackConfig.cmake  DESCRIPTION  README.md  log.txt  main.cpp
sources/: explorer.cpp
